fix(css): fix checkbox align

--- a/src/components/Control/Control.css
+++ b/src/components/Control/Control.css
@@ -15,7 +15,7 @@
 }
 
 .Control-panel-checkbox > * {
-  vertical-align: middle;
+  vertical-align: text-bottom;
 }
 
 .Control-panel > * {
